--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -70,7 +70,7 @@ jnlp.signing.keystore=
 main.class=net.servertube.pidfile.PidFileBukkit
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=JDK_1.6
 run.classpath=\
     ${javac.classpath}:\
