--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,9 +1,19 @@
 name: A520
 main: net.servertube.pidfile.PidFile
-version: 0.3
+version: 0.4
 commands:
   pid:
     description: Return Bukkit PID.
+    usage: /<command>
+    permission: op
+    permission-message: You don't have <permission>
+  savepid:
+    description: Save Bukkit PID to file.
+    usage: /<command>
+    permission: op
+    permission-message: You don't have <permission>
+  spid:
+    description: Save Bukkit PID to file.
     usage: /<command>
     permission: op
     permission-message: You don't have <permission>
